<resources>
    <string name="app_name">MedicalShop</string>
    <string name="todo">todo</string>
    <string-array name="product_item">
        <item>Add Product</item>
        <item>Update Product</item>
        <item>Delete Product</item>
    </string-array>
    <string-array name="category_item">
        <item>Add Category</item>
        <item>Delete Category</item>
    </string-array>
    <string-array name="category">Select Product Category :</string-array>
    <string name="addtxt"> Add </string>
    <string name="proid">Product ID </string>
    <string name="proname">Product Name  </string>
    <string name="proprice">Product Price  </string>
    <string name="procontent">Product Content </string>
    <string name="catoname">Enter Category</string>
    <string name="catname"> Category Name </string>
    <string name="spinner_txt">Please Select Your Performance : </string>
    <string name="nametxt">Name</string>
    <string name="emailtxt">E-mail</string>
    <string name="mobtxt">Mobile No</string>
    <string name="passtxt">Password</string>
    <string name="usernametxt">Username</string>
    <string name="registbtn">Register</string>
    <string name="accque">Have an account?</string>
    <string name="loginbtn">Login</string>
    <string name="noaccque">Dont have an account?</string>
    <string name="signupbtn">Sign Up</string>
    <string name="textadmin">"WELCOME ADMIN !!"</string>1
    <string name="admin">HEY ADMIN!</string>
    <string name="viewtxt">View Products</string>
    <string name="orderviewtxt">View Order</string>
    <string name="producttxt">Add And View Products</string>
    <string name="categorytxt">Category Detail</string>
    <string name="myprofile">PROFILE</string>
    <string name="store">STORE/RATING</string>
    <string name="aboutus">ABOUT US</string>
    <string name="logintxt">"WELCOME USER !!"</string>
    <string name="order">Order</string>
    <string name="logouttxt">LogOut</string>
    <string name="profiletxt">Profile</string>
    <string name="aboutustxt">About Us</string>
    <string name="storetxt">Store</string>
    <string name="loginadmin">Login as Admin? Click Here!</string>
    <string name="noadmintxt">Not a Admin?</string>
    <string name="btnadminloign">Login Admin</string>
    <string name="capsuletxt"> Capsule </string>
    <string name="ointtxt"> Ointment </string>
    <string name="syruptxt"> Syrup </string>
    <string name="tablettxt"> Tablet </string>
    <string name="productadd"> Add Product </string>

</resources>
