<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/backcolor"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    >


    <ImageView
        android:id="@+id/avatarimg"
        android:layout_width="140dp"
        android:layout_height="144dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/text_color"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/emailtxt"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/text_color"
        >
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/passtxt"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:text="@string/loginadmin"
            android:textSize="15sp"
            android:textColor="@color/text_color"
            android:clickable="true"
            android:focusable="true"
            />
        <TextView
            android:id="@+id/tvNotAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="75dp"
            android:textAlignment="center"
            android:text="@string/noadmintxt"
            android:textSize="15sp"
            android:textColor="@color/text_color"
            android:clickable="true"
            android:focusable="true"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rounded"
        android:text="@string/loginbtn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/noaccque"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_rounded"
        android:text="@string/registbtn"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>