<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/signupbtn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quetext"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/avatarimg"
        android:layout_width="140dp"
        android:layout_height="144dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074"
        app:srcCompat="@drawable/avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobedittxt"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/avatarimg"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="@+id/avatarimg"
        app:layout_constraintTop_toBottomOf="@+id/avatarimg"
        app:layout_constraintVertical_bias="0.068">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="380dp"
            android:layout_height="47dp"
            android:hint="@string/mobtxt"
            android:inputType="phone"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwdedittxt"
        android:layout_width="386dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mobedittxt"
        app:layout_constraintTop_toBottomOf="@+id/mobedittxt"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:hint="@string/passtxt"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/quetext"
        android:layout_width="387dp"
        android:layout_height="34dp"
        android:text="@string/noaccque"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginbtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_rounded"
        android:text="@string/loginbtn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pwdedittxt"
        app:layout_constraintTop_toBottomOf="@+id/pwdedittxt"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>

