<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_addproduct"
    android:background="@drawable/img2"
    android:weightSum="8"
    android:orientation="vertical"
    android:backgroundTintMode="src_atop"
    android:backgroundTint="#99020202">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productadd"
            android:textSize="25dp"
            android:textColor="@color/backcolor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.3"
        android:padding="10dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cateory"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:padding="10dp"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/backcolor">

                <EditText
                    android:id="@+id/proid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/proid"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColor="@color/backcolor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:padding="10dp"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/backcolor">

                <EditText
                    android:id="@+id/proname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/proname"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColor="@color/backcolor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:padding="10dp"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/backcolor">

                <EditText
                    android:id="@+id/proprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/proprice"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColor="@color/backcolor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:padding="10dp"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/backcolor">

                <EditText
                    android:id="@+id/procontemt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/procontent"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColor="@color/backcolor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded"
                android:text="@string/addtxt"
                android:textColor="@color/backcolor"
                android:textSize="20dp"/>

        </GridLayout>
    </LinearLayout>
</LinearLayout>