<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_category"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorytxt"
            android:textColor="@color/backcolor"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner_txt"
            android:textSize="20sp"
            android:padding="5dp"/>
        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/catydropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category_item"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cattxt"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catname"
            android:textSize="20sp"
            android:padding="5dp"
            android:visibility="gone"/>
        <Spinner
            android:id="@+id/catupdropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/text_color"
            android:padding="5dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/catname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/catoname"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:visibility="gone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_rounded_blue"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>